fixed text glitching off screen on vertical iphones

--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -6283,18 +6283,19 @@ body {
 
 @media (max-width: 400px) and (max-height: 700px) {
   .game1 {
-    height: 85vh; }
+    height: 80vh; }
   .headerText {
     font-size: 200%; }
   .bearContainer {
-    padding-top: 80px;
+    padding-top: 60px;
     padding-bottom: 40px; }
   .answerOptionsItem3 {
-    height: 30vh; }
+    height: 30vh;
+    max-width: 380px; }
   .answerOptionsItem3 .answerBar1 {
-    font-size: 170%; }
+    font-size: 90%; }
   .answerOptionsItem3 .answerBar2 {
-    font-size: 170%; } }
+    font-size: 90%; } }
 
 @media (max-height: 400px) {
   .game1 {
