--- a/stylesheets/modules/_game1.scss
+++ b/stylesheets/modules/_game1.scss
@@ -77,23 +77,23 @@ body {
 // modiciation for iphone 6 n 4 vertical!
 @media (max-width: 400px) and (max-height: 700px) {
     .game1 {
-        height: 85vh;
+        height: 80vh;
     }
     .headerText {
         font-size: 200%;
     }
     .bearContainer {
-        padding-top: 80px;
+        padding-top: 60px;
         padding-bottom: 40px;
     }
     .answerOptionsItem3 {
         height: 30vh;
+        max-width: 380px;
         .answerBar1 {
-            font-size: 170%;
-            
+            font-size: 90%;        
         }
         .answerBar2 {
-            font-size: 170%;
+            font-size: 90%;
         }
     }
 }
@@ -103,8 +103,6 @@ body {
     .game1 {
         height: 80vh;
     }
-    
-
     .headerText {
         font-size: 170%;
     }
